<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onStartLogIn"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-53dp">

        <TextView
            android:id="@+id/checkersTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intro_game"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/usernameTextBox"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/usernameInput"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.645"></EditText>

        <EditText
            android:id="@+id/passwordTextBox"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/passwordInput"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.779"></EditText>

        <Button
            android:id="@+id/newUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNewUser"
            android:text="@string/new_user" />

        <Button
            android:id="@+id/logInUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStartLogIn"
            android:text="@string/logInUser" />

        <Button
            android:id="@+id/howToPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="HowToPlay"
            android:text="@string/how_to_play" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>