<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:onClick="Resign"
    android:orientation="vertical"
    android:paddingTop="235dp"
    tools:context=".EndGame">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gameover"
        android:textSize="24sp"
        tools:layout_editor_absoluteY="108dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingTop="25dp"
        android:paddingRight="10dp"
        android:paddingBottom="25dp"
        android:text="@string/forfeit_message"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="New_Game"
        android:text="@string/ng" />

</LinearLayout>